--- a/index.html
+++ b/index.html
@@ -19,60 +19,58 @@
   </head>
   <body class="page">
     <header class="header decorated-zone">
-      <div class="header__content">
-        <div class="decorated-zone__item" aria-hidden="true">REC</div>
-        <nav class="header__theme-menu">
-          <ul class="header__theme-menu-list">
-            <li class="header__theme-menu-item">
-              <button
-                class="header__theme-menu-button header__theme-menu-button_type_light"
-              >
-                день
-              </button>
-            </li>
-            <li class="header__theme-menu-item">
-              <button
-                class="header__theme-menu-button header__theme-menu-button_active header__theme-menu-button_type_auto"
-                disabled
-              >
-                авто
-              </button>
-            </li>
-            <li class="header__theme-menu-item">
-              <button
-                class="header__theme-menu-button header__theme-menu-button_type_dark"
-              >
-                неон
-              </button>
-            </li>
-          </ul>
-        </nav>
-        <h1 class="title header__title">no focus</h1>
-        <p class="header__content-text title-decor">
-          Что делать, когда не можешь делать ничего <br />
-          Или почему нам так сложно сконцентрироваться, особенно когда очень
-          надо
-        </p>
-      </div>
+      <div class="decorated-zone__item" aria-hidden="true">REC</div>
+      <nav class="header__theme-menu">
+        <ul class="header__theme-menu-list">
+          <li class="header__theme-menu-item">
+            <button
+              class="header__theme-menu-button header__theme-menu-button_type_light"
+            >
+              день
+            </button>
+          </li>
+          <li class="header__theme-menu-item">
+            <button
+              class="header__theme-menu-button header__theme-menu-button_active header__theme-menu-button_type_auto"
+              disabled
+            >
+              авто
+            </button>
+          </li>
+          <li class="header__theme-menu-item">
+            <button
+              class="header__theme-menu-button header__theme-menu-button_type_dark"
+            >
+              неон
+            </button>
+          </li>
+        </ul>
+      </nav>
+      <h1 class="title header__title text-shadow">no focus</h1>
+      <p class="header__content-text title-decor">
+        Что делать, когда не можешь делать ничего <br />
+        Или почему нам так сложно сконцентрироваться, особенно когда очень надо
+      </p>
     </header>
     <main class="main">
       <section class="why">
         <h3 class="section-heading">Почему сосредоточиться так сложно</h3>
-        <div class="why__content">
-          <article class="content-item">
+        <div class="content-container">
+          <article class="">
             <h4 class="content-heading title-decor">Многозадачность</h4>
             <p class="content-text">
               Особенно сложно сосредоточиться, когда задач много и все они —
               важные. Где же легендарная многозадачность, когда она так нужна
               вам (и всем нанимающим менеджерам этого мира)? А дело в том, что
-              её просто не существует. Исследователи выяснили, что мозгу тяжело
-              концентрироваться даже на двух делах одновременно. А когда в поле
-              внимания попадает несколько важных задач, организм паникует и
-              выделяет кортизол и адреналин — «гормоны стресса». Из-за этого мы
-              работаем невнимательно: ошибаемся и быстро устаём.
+              её просто не существует. Исследователи
+              <a href="#" class="content__link text-shadow">выяснили</a>, что
+              мозгу тяжело концентрироваться даже на двух делах одновременно. А
+              когда в поле внимания попадает несколько важных задач, организм
+              паникует и выделяет кортизол и адреналин — «гормоны стресса».
+              Из-за этого мы работаем невнимательно: ошибаемся и быстро устаём.
             </p>
           </article>
-          <article class="content-item">
+          <article class="">
             <h4 class="content-heading title-decor">Дофамин</h4>
             <p class="content-text">
               С гормонами стресса всё понятно, но дальше — ещё интереснее. В
@@ -89,8 +87,8 @@
       </section>
       <section class="what">
         <h3 class="section-heading">Что снижает концентрацию внимания?</h3>
-        <div class="what__content">
-          <article class="content-item">
+        <div class="content-container">
+          <article class="">
             <h4 class="content-heading title-decor">Многозадачность</h4>
             <p class="content-text">
               Как концентрация может снижаться из-за… концентрации? Любая
@@ -101,7 +99,7 @@
               может не выдержать, если не давать ей отдохнуть.
             </p>
           </article>
-          <article class="content-item">
+          <article class="">
             <h4 class="content-heading title-decor">Еда</h4>
             <p class="content-text">
               «Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно
@@ -112,7 +110,7 @@
               хотим ещё больше быстрых углеводов.
             </p>
           </article>
-          <article class="content-item">
+          <article class="">
             <h4 class="content-heading title-decor">Гаджеты</h4>
             <p class="content-text">
               Да-да, это та самая ситуация, когда на экране ноутбука — код, в
@@ -131,69 +129,71 @@
           Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх
           секунд)
         </h3>
-        <div class="advice__content">
-          <div class="advice__text">
-            <h4 class="advice__heading title-decor">
-              5 простых (на самом деле не очень) советов
-            </h4>
-            <article class="content-item">
-              <h5 class="advice__subtitle title-decor">
-                Представьте небо и облака
-              </h5>
-              <p class="content-text">
-                Или листья в ручье. Тут дело в лёгкой медитации, которая
-                помогает успокоиться. Ведь часто именно тревожные мысли о
-                сложных задачах как раз и мешают эти сложные задачи делать. В
-                такие моменты можно закрыть глаза и представить, что чистое небо
-                — это вы, а облака — тревожные мысли. И сколько бы их ни было —
-                ясное небо всегда будет где-то там, за тучами, и никуда не
-                денется. Это упражнение поможет вернуться в настоящий момент, а
-                не волноваться о потенциальных проблемах из будущего.
-              </p>
-            </article>
-            <article class="content-item">
-              <h5 class="advice__subtitle title-decor">Включите музыку</h5>
-              <p class="content-text">
-                Но не любую, и не любимую. Любимая может быть связана с сильными
-                положительными эмоциями, которые тоже очень сильно отвлекают.
-                Подойдёт тихая, спокойная, умеренно-ритмичная. Можно вообще
-                попробовать включить плейлист в «белым шумом» или нейромузыкой.
-              </p>
-            </article>
-            <article class="content-item">
-              <h5 class="advice__subtitle title-decor">Прогуляйтесь</h5>
-              <p class="content-text">
-                Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
-                показал, что созерцание природы повышает концентрацию, в то
-                время как после просмотра городских пейзажей она наоборот
-                понижается. Можно совместить прогулку с физическими упражнениями
-                или бегом — так в мозг поступит ещё больше кислорода и он будет
-                лучше работать. Но и простая двадцатиминутная прогулка — тоже
-                отличный вариант.
-              </p>
-            </article>
-            <article class="content-item">
-              <h5 class="advice__subtitle title-decor">Хорошо ешьте</h5>
-              <p class="content-text">
-                Мы — не ваша бабушка, но это правда важно. Выбирайте продукты,
-                которые препятствуют резким скачкам сахара в крови. Например, с
-                высоким содержанием клетчатки: овощи, ягоды, бобовые (нут,
-                чечевица, фасоль), коричневый рис, хлеб из цельнозерновой
-                пшеницы.
-              </p>
-            </article>
-            <article class="content-item">
-              <h5 class="advice__subtitle title-decor">Читайте</h5>
-              <p class="content-text">
-                Настоящие бумажные книги. Это правда помогает с концентрацией:
-                чтобы прочитать пост в соцсети, достаточно нескольких минут или
-                даже секунд. А вот интересная книга способна затянуть и на
-                несколько часов и круто тренирует направленное внимание.
-              </p>
-            </article>
-          </div>
-          <div class="advice__images">
-            <h4 class="title-decor">А можно в картинках?</h4>
+
+        <div class="advice__text">
+          <h4 class="advice__heading title-decor">
+            5 простых (на самом деле не очень) советов
+          </h4>
+          <article class="content-item">
+            <h5 class="advice__subtitle title-decor">
+              Представьте небо и облака
+            </h5>
+            <p class="content-text">
+              Или листья в ручье. Тут дело в лёгкой медитации, которая помогает
+              успокоиться. Ведь часто именно тревожные мысли о сложных задачах
+              как раз и мешают эти сложные задачи делать. В такие моменты можно
+              закрыть глаза и представить, что чистое небо — это вы, а облака —
+              тревожные мысли. И сколько бы их ни было — ясное небо всегда будет
+              где-то там, за тучами, и никуда не денется. Это упражнение поможет
+              вернуться в настоящий момент, а не волноваться о потенциальных
+              проблемах из будущего.
+            </p>
+          </article>
+          <article class="content-item">
+            <h5 class="advice__subtitle title-decor">Включите музыку</h5>
+            <p class="content-text">
+              Но не любую, и не любимую. Любимая может быть связана с сильными
+              положительными эмоциями, которые тоже очень сильно отвлекают.
+              Подойдёт тихая, спокойная, умеренно-ритмичная. Можно вообще
+              попробовать включить плейлист в «белым шумом» или нейромузыкой.
+            </p>
+          </article>
+          <article class="content-item">
+            <h5 class="advice__subtitle title-decor">Прогуляйтесь</h5>
+            <p class="content-text">
+              Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
+              <a href="#" class="text-shadow">показал</a>, что созерцание
+              природы повышает концентрацию, в то время как после просмотра
+              городских пейзажей она наоборот понижается. Можно совместить
+              прогулку с физическими упражнениями или бегом — так в мозг
+              поступит ещё больше кислорода и он будет лучше работать. Но и
+              простая двадцатиминутная прогулка — тоже отличный вариант.
+            </p>
+          </article>
+          <article class="content-item">
+            <h5 class="advice__subtitle title-decor">Хорошо ешьте</h5>
+            <p class="content-text">
+              Мы — не ваша бабушка, но это правда важно. Выбирайте продукты,
+              которые препятствуют резким скачкам сахара в крови. Например, с
+              высоким содержанием клетчатки: овощи, ягоды, бобовые (нут,
+              чечевица, фасоль), коричневый рис, хлеб из цельнозерновой пшеницы.
+            </p>
+          </article>
+          <article class="content-item">
+            <h5 class="advice__subtitle title-decor">Читайте</h5>
+            <p class="content-text">
+              Настоящие бумажные книги. Это правда помогает с концентрацией:
+              чтобы прочитать пост в соцсети, достаточно нескольких минут или
+              даже секунд. А вот интересная книга способна затянуть и на
+              несколько часов и круто тренирует направленное внимание.
+            </p>
+          </article>
+        </div>
+      </section>
+      <section class="gallery">
+        <h4 class="title-decor">А можно в картинках?</h4>
+        <ul class="gallery__list">
+          <li class="gallery__list-item">
             <picture class="advice__image">
               <img
                 class="advice__img"
@@ -202,6 +202,8 @@
                 loading="lazy"
               />
             </picture>
+          </li>
+          <li class="gallery__list-item">
             <picture class="advice__image">
               <img
                 class="advice__img"
@@ -210,6 +212,8 @@
                 loading="lazy"
               />
             </picture>
+          </li>
+          <li class="gallery__list-item">
             <picture class="advice__image">
               <img
                 class="advice__img"
@@ -218,6 +222,8 @@
                 loading="lazy"
               />
             </picture>
+          </li>
+          <li class="gallery__list-item">
             <picture class="advice__image">
               <img
                 class="advice__img"
@@ -226,6 +232,8 @@
                 loading="lazy"
               />
             </picture>
+          </li>
+          <li class="gallery__list-item">
             <picture class="advice__image">
               <img
                 class="advice__img"
@@ -234,10 +242,13 @@
                 loading="lazy"
               />
             </picture>
-          </div>
-        </div>
+          </li>
+        </ul>
       </section>
     </main>
+    <footer class="footer decorated-zone">
+      <h2 class="title text-shadow">focus</h2>
+    </footer>
     <script src="./scripts/script.js"></script>
   </body>
 </html>
