--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
       </p>
     </header>
     <main class="main">
-      <section class="why">
+      <section class="section-block">
         <h3 class="section-heading">Почему сосредоточиться так сложно</h3>
         <div class="content-container">
-          <article class="">
-            <h4 class="content-heading title-decor">Многозадачность</h4>
-            <p class="content-text">
+          <article class="card">
+            <h4 class="title-decor">Многозадачность</h4>
+            <p>
               Особенно сложно сосредоточиться, когда задач много и все они —
               важные. Где же легендарная многозадачность, когда она так нужна
               вам (и всем нанимающим менеджерам этого мира)? А дело в том, что
@@ -70,9 +70,9 @@
               Из-за этого мы работаем невнимательно: ошибаемся и быстро устаём.
             </p>
           </article>
-          <article class="">
-            <h4 class="content-heading title-decor">Дофамин</h4>
-            <p class="content-text">
+          <article class="card">
+            <h4 class="title-decor">Дофамин</h4>
+            <p>
               С гормонами стресса всё понятно, но дальше — ещё интереснее. В
               нашей невозможности сосредоточиться замешана и полная
               противоположность стрессу — дофамин. Это вещество участвует в
@@ -85,12 +85,12 @@
           </article>
         </div>
       </section>
-      <section class="what">
+      <section class="what-section section-block">
         <h3 class="section-heading">Что снижает концентрацию внимания?</h3>
         <div class="content-container">
-          <article class="">
-            <h4 class="content-heading title-decor">Многозадачность</h4>
-            <p class="content-text">
+          <article class="card">
+            <h4 class="title-decor">Многозадачность</h4>
+            <p>
               Как концентрация может снижаться из-за… концентрации? Любая
               стрессовая ситуация (и резко меняющийся мир в целом) заставляет
               наш мозг постоянно «сканировать» окружающую среду на предмет
@@ -99,9 +99,9 @@
               может не выдержать, если не давать ей отдохнуть.
             </p>
           </article>
-          <article class="">
-            <h4 class="content-heading title-decor">Еда</h4>
-            <p class="content-text">
+          <article class="card">
+            <h4 class="title-decor">Еда</h4>
+            <p>
               «Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно
               доставляют в мозг энергию и помогают ему лучше работать. Но уходит
               эта энергия также быстро, как и приходит. А мы в результате
@@ -110,9 +110,9 @@
               хотим ещё больше быстрых углеводов.
             </p>
           </article>
-          <article class="">
-            <h4 class="content-heading title-decor">Гаджеты</h4>
-            <p class="content-text">
+          <article class="card">
+            <h4 class="title-decor">Гаджеты</h4>
+            <p>
               Да-да, это та самая ситуация, когда на экране ноутбука — код, в
               наушниках — подкаст, а на компьютере фоном — ещё и видео с
               забавными утятами. В результате мозг пытается переключиться с
@@ -124,11 +124,11 @@
           </article>
         </div>
       </section>
-      <section class="advice">
-        <h3 class="section-heading">
+      <section class="advice section-block">
+        <p class="section-heading">
           Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх
           секунд)
-        </h3>
+        </p>
 
         <div class="advice__text">
           <h4 class="advice__heading title-decor">
@@ -138,7 +138,7 @@
             <h5 class="advice__subtitle title-decor">
               Представьте небо и облака
             </h5>
-            <p class="content-text">
+            <p>
               Или листья в ручье. Тут дело в лёгкой медитации, которая помогает
               успокоиться. Ведь часто именно тревожные мысли о сложных задачах
               как раз и мешают эти сложные задачи делать. В такие моменты можно
@@ -151,7 +151,7 @@
           </article>
           <article class="content-item">
             <h5 class="advice__subtitle title-decor">Включите музыку</h5>
-            <p class="content-text">
+            <p>
               Но не любую, и не любимую. Любимая может быть связана с сильными
               положительными эмоциями, которые тоже очень сильно отвлекают.
               Подойдёт тихая, спокойная, умеренно-ритмичная. Можно вообще
@@ -160,7 +160,7 @@
           </article>
           <article class="content-item">
             <h5 class="advice__subtitle title-decor">Прогуляйтесь</h5>
-            <p class="content-text">
+            <p>
               Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
               <a href="#" class="text-shadow">показал</a>, что созерцание
               природы повышает концентрацию, в то время как после просмотра
@@ -172,7 +172,7 @@
           </article>
           <article class="content-item">
             <h5 class="advice__subtitle title-decor">Хорошо ешьте</h5>
-            <p class="content-text">
+            <p>
               Мы — не ваша бабушка, но это правда важно. Выбирайте продукты,
               которые препятствуют резким скачкам сахара в крови. Например, с
               высоким содержанием клетчатки: овощи, ягоды, бобовые (нут,
@@ -181,7 +181,7 @@
           </article>
           <article class="content-item">
             <h5 class="advice__subtitle title-decor">Читайте</h5>
-            <p class="content-text">
+            <p>
               Настоящие бумажные книги. Это правда помогает с концентрацией:
               чтобы прочитать пост в соцсети, достаточно нескольких минут или
               даже секунд. А вот интересная книга способна затянуть и на
@@ -193,50 +193,50 @@
       <section class="gallery">
         <h4 class="title-decor">А можно в картинках?</h4>
         <ul class="gallery__list">
-          <li class="gallery__list-item">
-            <picture class="advice__image">
+          <li class="sunset-img">
+            <picture class="gallery__image">
               <img
-                class="advice__img"
+                class="gallery__img"
                 src="./images/sunset.png"
                 alt="Солнечный закат на фоне гор и моря"
                 loading="lazy"
               />
             </picture>
           </li>
-          <li class="gallery__list-item">
-            <picture class="advice__image">
+          <li class="ice-cream-img">
+            <picture class="gallery__image">
               <img
-                class="advice__img"
+                class="gallery__img"
                 src="./images/ice-cream.png"
                 alt="Мороженое в форме шариков, выражающих ращные эмоции, в взбитых сливках на феолетовом фоне"
                 loading="lazy"
               />
             </picture>
           </li>
-          <li class="gallery__list-item">
-            <picture class="advice__image">
+          <li class="tape-img">
+            <picture class="gallery__image">
               <img
-                class="advice__img"
+                class="gallery__img"
                 src="./images/tape.png"
                 alt="Феолетовая музыкальная касета"
                 loading="lazy"
               />
             </picture>
           </li>
-          <li class="gallery__list-item">
-            <picture class="advice__image">
+          <li class="books-img">
+            <picture class="gallery__image">
               <img
-                class="advice__img"
+                class="gallery__img"
                 src="./images/books.png"
                 alt="Стопка книг"
                 loading="lazy"
               />
             </picture>
           </li>
-          <li class="gallery__list-item">
-            <picture class="advice__image">
+          <li class="street-img">
+            <picture class="gallery__image">
               <img
-                class="advice__img"
+                class="gallery__img"
                 src="./images/street.png"
                 alt="Вид на перекресток в феолетовых тонах"
                 loading="lazy"
