Финальный фикс перед ревью

--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
           </article>
         </div>
       </section>
+
       <section class="what-section section-block">
         <h3 class="section-heading">Что снижает концентрацию внимания?</h3>
         <div class="content-container">
@@ -124,16 +125,17 @@
           </article>
         </div>
       </section>
+
       <section class="advice section-block">
         <p class="section-heading">
           Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх
           секунд)
         </p>
-
         <div class="advice__text">
           <h4 class="advice__heading title-decor">
             5 простых (на самом деле не очень) советов
           </h4>
+
           <article class="content-item">
             <h5 class="advice__subtitle title-decor">
               Представьте небо и облака
@@ -149,6 +151,7 @@
               проблемах из будущего.
             </p>
           </article>
+
           <article class="content-item">
             <h5 class="advice__subtitle title-decor">Включите музыку</h5>
             <p>
@@ -158,18 +161,20 @@
               попробовать включить плейлист в «белым шумом» или нейромузыкой.
             </p>
           </article>
+
           <article class="content-item">
             <h5 class="advice__subtitle title-decor">Прогуляйтесь</h5>
             <p>
               Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
-              <a href="#" class="text-shadow">показал</a>, что созерцание
-              природы повышает концентрацию, в то время как после просмотра
-              городских пейзажей она наоборот понижается. Можно совместить
-              прогулку с физическими упражнениями или бегом — так в мозг
-              поступит ещё больше кислорода и он будет лучше работать. Но и
+              <a href="#" class="content__link text-shadow">показал</a>, что
+              созерцание природы повышает концентрацию, в то время как после
+              просмотра городских пейзажей она наоборот понижается. Можно
+              совместить прогулку с физическими упражнениями или бегом — так в
+              мозг поступит ещё больше кислорода и он будет лучше работать. Но и
               простая двадцатиминутная прогулка — тоже отличный вариант.
             </p>
           </article>
+
           <article class="content-item">
             <h5 class="advice__subtitle title-decor">Хорошо ешьте</h5>
             <p>
@@ -179,6 +184,7 @@
               чечевица, фасоль), коричневый рис, хлеб из цельнозерновой пшеницы.
             </p>
           </article>
+
           <article class="content-item">
             <h5 class="advice__subtitle title-decor">Читайте</h5>
             <p>
@@ -190,6 +196,7 @@
           </article>
         </div>
       </section>
+
       <section class="gallery">
         <h4 class="title-decor">А можно в картинках?</h4>
         <ul class="gallery__list">
