--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
     </header>
     <main class="main">
       <section class="section-block">
-        <h3 class="section-heading">Почему сосредоточиться так сложно</h3>
+        <h2 class="section-heading">Почему сосредоточиться так сложно</h2>
         <div class="content-container">
           <article class="card">
-            <h4 class="title-decor">Многозадачность</h4>
+            <h3 class="title-decor">Многозадачность</h3>
             <p>
               Особенно сложно сосредоточиться, когда задач много и все они —
               важные. Где же легендарная многозадачность, когда она так нужна
@@ -71,7 +71,7 @@
             </p>
           </article>
           <article class="card">
-            <h4 class="title-decor">Дофамин</h4>
+            <h3 class="title-decor">Дофамин</h3>
             <p>
               С гормонами стресса всё понятно, но дальше — ещё интереснее. В
               нашей невозможности сосредоточиться замешана и полная
@@ -87,10 +87,10 @@
       </section>
 
       <section class="what-section section-block">
-        <h3 class="section-heading">Что снижает концентрацию внимания?</h3>
+        <h2 class="section-heading">Что снижает концентрацию внимания?</h2>
         <div class="content-container">
           <article class="card">
-            <h4 class="title-decor">Многозадачность</h4>
+            <h3 class="title-decor">Многозадачность</h3>
             <p>
               Как концентрация может снижаться из-за… концентрации? Любая
               стрессовая ситуация (и резко меняющийся мир в целом) заставляет
@@ -101,7 +101,7 @@
             </p>
           </article>
           <article class="card">
-            <h4 class="title-decor">Еда</h4>
+            <h3 class="title-decor">Еда</h3>
             <p>
               «Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно
               доставляют в мозг энергию и помогают ему лучше работать. Но уходит
@@ -112,7 +112,7 @@
             </p>
           </article>
           <article class="card">
-            <h4 class="title-decor">Гаджеты</h4>
+            <h3 class="title-decor">Гаджеты</h3>
             <p>
               Да-да, это та самая ситуация, когда на экране ноутбука — код, в
               наушниках — подкаст, а на компьютере фоном — ещё и видео с
@@ -132,14 +132,14 @@
           секунд)
         </p>
         <div class="advice__text">
-          <h4 class="advice__heading title-decor">
+          <h2 class="advice__heading title-decor">
             5 простых (на самом деле не очень) советов
-          </h4>
+          </h2>
 
           <article class="content-item">
-            <h5 class="advice__subtitle title-decor">
+            <h3 class="advice__subtitle title-decor">
               Представьте небо и облака
-            </h5>
+            </h3>
             <p>
               Или листья в ручье. Тут дело в лёгкой медитации, которая помогает
               успокоиться. Ведь часто именно тревожные мысли о сложных задачах
@@ -153,7 +153,7 @@
           </article>
 
           <article class="content-item">
-            <h5 class="advice__subtitle title-decor">Включите музыку</h5>
+            <h3 class="advice__subtitle title-decor">Включите музыку</h3>
             <p>
               Но не любую, и не любимую. Любимая может быть связана с сильными
               положительными эмоциями, которые тоже очень сильно отвлекают.
@@ -163,7 +163,7 @@
           </article>
 
           <article class="content-item">
-            <h5 class="advice__subtitle title-decor">Прогуляйтесь</h5>
+            <h3 class="advice__subtitle title-decor">Прогуляйтесь</h3>
             <p>
               Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
               <a href="#" class="content__link text-shadow">показал</a>, что
@@ -176,7 +176,7 @@
           </article>
 
           <article class="content-item">
-            <h5 class="advice__subtitle title-decor">Хорошо ешьте</h5>
+            <h3 class="advice__subtitle title-decor">Хорошо ешьте</h3>
             <p>
               Мы — не ваша бабушка, но это правда важно. Выбирайте продукты,
               которые препятствуют резким скачкам сахара в крови. Например, с
@@ -186,7 +186,7 @@
           </article>
 
           <article class="content-item">
-            <h5 class="advice__subtitle title-decor">Читайте</h5>
+            <h3 class="advice__subtitle title-decor">Читайте</h3>
             <p>
               Настоящие бумажные книги. Это правда помогает с концентрацией:
               чтобы прочитать пост в соцсети, достаточно нескольких минут или
@@ -198,9 +198,9 @@
       </section>
 
       <section class="gallery">
-        <h4 class="title-decor">А можно в картинках?</h4>
+        <h2 class="title-decor">А можно в картинках?</h2>
         <ul class="gallery__list">
-          <li class="sunset-img">
+          <li class="gallery__list-item">
             <picture class="gallery__image">
               <img
                 class="gallery__img"
@@ -210,7 +210,7 @@
               />
             </picture>
           </li>
-          <li class="ice-cream-img">
+          <li class="gallery__list-item">
             <picture class="gallery__image">
               <img
                 class="gallery__img"
@@ -220,7 +220,7 @@
               />
             </picture>
           </li>
-          <li class="tape-img">
+          <li class="gallery__list-item">
             <picture class="gallery__image">
               <img
                 class="gallery__img"
@@ -230,7 +230,7 @@
               />
             </picture>
           </li>
-          <li class="books-img">
+          <li class="gallery__list-item">
             <picture class="gallery__image">
               <img
                 class="gallery__img"
@@ -240,7 +240,7 @@
               />
             </picture>
           </li>
-          <li class="street-img">
+          <li class="gallery__list-item">
             <picture class="gallery__image">
               <img
                 class="gallery__img"
